# SMARTER-repository

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
django-data/: smarter_uwsgi.ini
django-data/data/: .gitignore  Data_Description_for_Database.xlsx.dvc  Data_Isabelle.dvc  Data_Jean-Michel.dvc  Data_Karolina.dvc  Data_Marie.dvc
django-data/data/Data_Arsenos/: .gitignore  Sotiria_DataAUTH.xlsx.dvc
django-data/data/Data_Coralie/: .gitignore  smarter_dairy_sheep_FR.csv.dvc
django-data/smarter/: manage.py
django-data/smarter/accounts/: views.py
django-data/smarter/accounts/templates/accounts/: logged_out.html  login.html
django-data/smarter/repository/: admin.py  models.py  views.py
django-data/smarter/repository/management/commands/: import_datasets.py
django-data/smarter/repository/migrations/: 0001_initial.py  0002_alter_dataset_owner.py  0003_alter_dataset_species.py  0004_alter_dataset_embargo.py  0005_dataset_filename_alter_dataset_individual_data_and_more.py  0006_dataset_dataset_datatype_owner_idx.py  0007_alter_dataset_filename.py
django-data/smarter/repository/templates/repository/: data.html  dataset_filter.html  (+2 more)
django-data/smarter/repository/templatetags/: filename.py  query_transform.py
django-data/smarter/smarter/: asgi.py  settings.py  urls.py  wsgi.py
django-data/smarter/static/css/: custom.css
django-data/smarter/templates/: base.html
django-data/smarter/templates/includes/: pagination.html
django-data/smarter/templates/registration/: login.html
nginx/conf.d/: default.conf
uwsgi/: Dockerfile
