[tool.poetry]
name = "smarter-repository"
version = "0.1.0"
description = "SMARTER data repository"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.7"
mysqlclient = "^2.1.1"
python-decouple = "^3.7"
uwsgi = "^2.0.21"
django-bootstrap-v5 = "^1.0.11"
django-debug-toolbar = "^3.8.1"
openpyxl = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
